Fixed the spacing and sizing in Task list

--- a/Frontend/style/layout/TaskList.css
+++ b/Frontend/style/layout/TaskList.css
@@ -156,15 +156,13 @@
 .list-box {
     width: 100%;
     height: 100%;
-    margin-left: 50px;
+    padding-left: 50px;
 }
 
 #taskList,
 #completedTaskList {
   border: 10px solid #D4D7C6;
   padding: 10px;
-  width: 1025px;
-  margin: 0 auto;
 }
 
 .list-group {
@@ -175,9 +173,7 @@
   } 
   
   .heading-container {
-    width: 70%;
     padding-top: 50px;
-    margin: 0 auto;
   }
 
   .list-group-item {
